gap fix

--- a/src/app/modules/dashboard/what-this-mean/what-this-mean.component.scss
+++ b/src/app/modules/dashboard/what-this-mean/what-this-mean.component.scss
@@ -47,7 +47,6 @@
 @media screen and (max-width: 991px) {
   .section {
     .wrapper {
-
       margin: 2rem 0 0 0;
       gap: 1.5rem;
     }
@@ -65,7 +64,7 @@
       }
 
       .info {
-        margin: .75rem 0 0 0;
+        margin: 0.75rem 0 0 0;
         font-size: 16px;
         line-height: 15px;
       }
@@ -75,12 +74,13 @@
 
 @media screen and (max-width: 575px) {
   .section {
-    padding: .5rem 1rem 1.5rem 1rem;
+    padding: 0.5rem 1rem 1.5rem 1rem;
     .wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      gap: 1rem;
     }
 
     .each-info-circle {
